yaml/efk/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - sec-nlb-pub-027c75fd9b70533c.elb.ap-northeast-2.amazonaws.com
    - a8658a0357c2a4ff08a49d6ec6597b06-3984ae3e455ecb86.elb.ap-northeast-2.amazonaws.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-kibana
spec:
  gateways:
  - gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kibana/
    rewrite:
      uri: /
    route:
    - destination:
       host: quickstart-kb-http.default.svc.cluster.local
